updated models, fixed discounting total on home page

--- a/apps/market/templates/market/cart.html
+++ b/apps/market/templates/market/cart.html
@@ -163,7 +163,7 @@
                                          <td>
                                              ${{cart_total}}
                                          </td>
-                                         <td><a hrf="/checkout"><button  class="btn btn-primary">Checkout</button></a></td>
+                                         <td><a href="/checkout"><button  class="btn btn-primary">Checkout</button></a></td>
                                      </tr>
                              </tbody>
                            </table>
