--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -46,7 +46,9 @@
     form {
         display:inline-block;
     }
-
+    .oldprice {
+        text-decoration: line-through;
+    }
     </style>
 
 </head>
