--- a/apps/market/templates/market/design.html
+++ b/apps/market/templates/market/design.html
@@ -114,7 +114,8 @@
                               <h6 class="card-title">Licenses Available: {{design.licenses}}</h6>
                               <hr>
                               {% if design.designer.id == request.session.user_id %}
-                              <a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary">Edit Design</a>
+                              <div class="alert alert-info" role="alert">Buy button is disabled, shoppers will not be able to view the edit or performance links</div>
+                              <button class="btn btn-warning">Buy</button> <div class="float-right"><a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary">Edit Design</a> <a href="/portfolio/{{request.session.user_id}}/performance/{{design.id}}" class="btn btn-secondary">View Sales</a></div> 
                               {% else %}
                                 {% if design.id in request.session.cart %}
                                 <a href="/checkout" class="btn btn-primary btn-sm">Checkout</a> 
