--- a/apps/market/templates/market/design.html
+++ b/apps/market/templates/market/design.html
@@ -115,7 +115,7 @@
                               <hr>
                               {% if design.designer.id == request.session.user_id %}
                               <div class="alert alert-info" role="alert">Buy button is disabled, shoppers will not be able to view the edit or performance links</div>
-                              <button class="btn btn-warning">Buy</button> <div class="float-right"><a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary">Edit Design</a> <a href="/portfolio/{{request.session.user_id}}/performance/{{design.id}}" class="btn btn-secondary">View Sales</a></div> 
+                              <button class="btn btn-warning">Buy</button> 
                               {% else %}
                                 {% if design.id in request.session.cart %}
                                 <a href="/checkout" class="btn btn-primary btn-sm">Checkout</a> 
@@ -134,8 +134,36 @@
                         {% else %}
                         <a href="{{request.META.HTTP_REFERER}}" class="btn btn-secondary">Go Back</a>
                         {% endif %}
+                        <div class="float-right"><a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary">Edit Design</a> <a href="/portfolio/{{request.session.user_id}}/performance/{{design.id}}" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">View Sales</a></div> 
                     </div>
-                
+                    <div class="col">
+
+
+                    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title h4">{{design.name}} Sales Performance</h4>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                   <table class="table">
+                                       <thead>
+                                        <tr>
+                                            <td>Order</td>
+                                            <td>Sales</td>
+                                            <td>Price</td>
+                                        </tr>
+                                        </thead>
+                                   </table>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
                     
                     
                 
@@ -145,6 +173,9 @@
 
     </div>
     <hr>
+
+    
+
 
 
 
