--- a/apps/market/templates/market/portfolio.html
+++ b/apps/market/templates/market/portfolio.html
@@ -123,8 +123,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">Licenses</th>
                         <th scope="col">Price</th>
-                        <th scope="col">Orders</th>
-                        <th scope="col">Revenue</th>
+                        <th scope="col">Orders</th>>
                         <th scope="col">Actions</th>
                       </tr>
                     </thead>
@@ -141,7 +140,6 @@
                                 <td>${{design.price}}</td>
                                 {% endif %}
                                 <td>{{design.sales}}</td>
-                                <td>${{design.total_revenue}}</td>
                                 
                                 
                                 <td>    
