--- a/apps/market/templates/market/editdesign.html
+++ b/apps/market/templates/market/editdesign.html
@@ -65,10 +65,7 @@
                     </li> 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/cart">Cart ({{request.session.cart | length}})</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Checkout</a>
+                            <a class="nav-link" href="/cart">Checkout ({{request.session.cart | length}})</a>
                     </li>
                     
                     </ul>
@@ -176,7 +173,7 @@
                             <a href="/portfolio/{{request.session.user_id}}/pause/{{design.id}}">
                             <button type="button" class="btn btn-secondary btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="Pause sales and temporarily remove from public listings." data-trigger="hover">Pause</button></a>
                         {% endif %}
-                            <a href="/portfolio/{{request.session.user_id}}/delete/{{design.id}}"> <button type="button" class="btn btn-danger btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="This will permanently delete this listing, you can hide this from the marketplace by pausing your campaign." data-trigger="hover">Delete</button></a>
+                            <a class="float-right" href="/portfolio/{{request.session.user_id}}/delete/{{design.id}}"> <button type="button" class="btn btn-danger btn-sm" data-container="body" data-toggle="popover" data-placement="top" data-content="This will permanently delete this listing, you can hide this from the marketplace by pausing your campaign." data-trigger="hover">Delete</button></a>
                     </div>
                   </div>
                 <hr>
