--- a/apps/market/templates/market/register.html
+++ b/apps/market/templates/market/register.html
@@ -61,11 +61,8 @@
                     </li> 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Cart (0)</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Checkout</a>
-                    </li>
+                        <a class="nav-link" href="/cart">Checkout ({{request.session.cart | length}})</a>
+                </li>
                     
                   </ul>
             </div>
