--- a/apps/market/templates/market/design.html
+++ b/apps/market/templates/market/design.html
@@ -131,6 +131,7 @@
                         {% else %}
                         <a href="{{request.META.HTTP_REFERER}}" class="btn btn-secondary">Go Back</a>
                         {% endif %}
+                        {% if design.designer.id == request.session.user_id %}
                         <div class="float-right"><a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary">Edit Design</a> <a href="/portfolio/{{request.session.user_id}}/performance/{{design.id}}" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">View Sales</a></div> 
                     </div>
                     <div class="col">
@@ -162,6 +163,7 @@
                             </div>
                         </div>
                         </div>
+                      {% endif %}  
                     </div>
                     
                     
